[package]
name = "rust_ssh_client"
version = "0.1.0"
authors = ["Diogo Jerónimo"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.1" 
curve25519-dalek = "3"
ring = "0.16.15"
x25519-dalek = "0.6"
rand = "*"