[package]
name = "rustssh_client"
version = "0.1.0"
authors = ["Diogo Jerónimo"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.4.8", features=["derive"] }
x25519-dalek = {version = "2.0.0", features=["static_secrets"] }
ed25519-dalek = "2.1.0"
ring = "0.17.5"
rand = "0.8.5"
termion = "2.0.3"
base64 = "0.21.5"